[package]
name = "ch3"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
polyhal = { git = "https://github.com/Byte-OS/polyhal.git", features = ["kcontext", "trap", "boot"]}

linker = { path = "../linker" }
rcore-console = { path = "../console" }
kernel-context = { path = "../kernel-context" }
syscall = { path = "../syscall", features = ["kernel"] }

[build-dependencies]
linker = { path = "../linker" }

[features]
coop = []
