[package]
name = "ch3"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
# polyhal = { git = "https://github.com/Byte-OS/polyhal.git", features = ["kcontext", "trap", "boot"]}
polyhal = {git = "ssh://git@github.com/xushanpu123/polyhal.git",features = ["kcontext", "trap", "boot"]}
log = "0.4"
kernel-alloc = { path = "../kernel-alloc" }
# buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linker = { path = "../linker" }
rcore-console = { path = "../console" }
# kernel-context = { path = "../kernel-context" }
syscall = { path = "../syscall", features = ["kernel"] }

[build-dependencies]
linker = { path = "../linker" }

[features]
coop = []
