[package]
name = "ch5"
version = "0.0.1"
edition = "2021"
authors = ["zflcs <1491657576@qq.com>"]

[dependencies]
polyhal = {git = "ssh://git@github.com/xushanpu123/polyhal.git",features = ["kcontext", "trap", "boot"]}
xmas-elf = "0.8.0"
spin = "0.9"

linker = { path = "../linker" }
rcore-console = { path = "../console" }
# kernel-context = { path = "../kernel-context", features = ["foreign"] }
kernel-alloc = { path = "../kernel-alloc" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
rcore-task-manage = { path = "../task-manage", features = ["proc"] }

[build-dependencies]
linker = { path = "../linker" }
