[package]
name = "ch6"
version = "0.0.1"
edition = "2021"
authors = ["tkf2019 <kaifu6821@qq.com>"]

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
polyhal = {git = "https://github.com/xushanpu123/polyhal.git",features = ["kcontext", "trap", "boot"]}
xmas-elf = "0.8.0"
spin = "0.9"

linker = { path = "../linker" }
rcore-console = { path = "../console" }
# kernel-context = { path = "../kernel-context", features = ["foreign"] }
kernel-alloc = { path = "../kernel-alloc" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
rcore-task-manage = { path = "../task-manage", features = ["proc"] }
easy-fs = { path = "../easy-fs" }
log = "0.4"

[build-dependencies]
linker = { path = "../linker" }
